# lapce-ocaml-lsp

./: Cargo.toml  plugin.toml
src/: main.rs
